--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="MainApp">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Slim RAT</title>
-  <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css">
-  <link rel="stylesheet" href="assets/stylesheets/vendors/leaflet.css">
-  <link rel="stylesheet" href="assets/stylesheets/application.css">
-</head>
-<body ng-app="MainApp">
-  <div ng-controller="MainCtrl"></div>
+  <script>if (typeof module === 'object') { window.module = module;module = undefined; }</script>
   <script src="../node_modules/angular/angular.js"></script>
   <script src="../node_modules/angular-route/angular-route.js"></script>
   <script src="../node_modules/ng-infinite-scroll/build/ng-infinite-scroll.js"></script>
   <script src="assets/javascripts/vendors/jquery.js"></script>
   <script src="assets/javascripts/vendors/leaflet.js"></script>
   <script src="assets/javascripts/controllers/main.js"></script>
+  <script>if (window.module) module = window.module;</script>
+  <link rel="stylesheet" href="assets/stylesheets/vendors/leaflet.css">
+  <link rel="stylesheet" href="assets/stylesheets/application.css">
+</head>
+<body ng-controller="MainCtrl">
+  <h2>MainCtrl</h2>
 </body>
 </html>
