--- a/app/lab.html
+++ b/app/lab.html
@@ -14,31 +14,37 @@
   <script src="assets/javascripts/vendors/leaflet.js"></script>
   <script src="assets/javascripts/controllers/lab.js"></script>
   <script>if (window.module) module = window.module;</script>
+  <script>$(document).ready(function(){ $('.nav-extended .tabs').tabs(); });</script>
   <link rel="stylesheet" href="assets/stylesheets/vendors/materialize.css">
   <link rel="stylesheet" href="assets/stylesheets/vendors/leaflet.css">
   <link rel="stylesheet" href="assets/stylesheets/application.css">
 </head>
 <body ng-controller="LabCtrl">
-  <nav class="indigo darken-4 nav-extended">
+  <nav class="nav-extended indigo darken-4">
     <div class="nav-wrapper container">
       <div class="left">
         <img class="logo" src="assets/images/logo.png" alt="Slim RAT">
       </div>
       <ul class="right mr15">
-        <li><span class="device">D54d58D6dF65F</span></li>
-        <li><a href="#"><i class="material-icons">arrow_forward</i></a></li>
+        <li><span class="device">Device Model</span></li>
+        <li><a ng-click="close();"><i class="material-icons">arrow_forward</i></a></li>
       </ul>
     </div>
-      <div class="nav-content">
-        <ul class="tabs tabs-fixed-width tabs-transparent">
-          <li class="tab"><a href="#">Test 01</a></li>
-          <li class="tab"><a href="#">Test 02</a></li>
-          <li class="tab"><a href="#">Test 03</a></li>
-        </ul>
-      </div>
+    <div class="nav-content">
+      <ul class="tabs tabs-fixed-width tabs-transparent">
+        <li class="tab"><a ng-click="goToPage('camera');"><i class="material-icons">photo_camera</i> Camera</a></li>
+        <li class="tab"><a ng-click="goToPage('fileManager');"><i class="material-icons">folder_shared</i> File Manager</a></li>
+        <li class="tab"><a ng-click="goToPage('mic');"><i class="material-icons">mic</i> Mic</a></li>
+        <li class="tab"><a ng-click="goToPage('location');"><i class="material-icons">place</i> Location</a></li>
+        <li class="tab"><a ng-click="goToPage('contacts');"><i class="material-icons">group</i> Contacts</a></li>
+        <li class="tab"><a ng-click="goToPage('smsManager');"><i class="material-icons">sms</i> SMS</a></li>
+        <li class="tab"><a ng-click="goToPage('callsLogs');"><i class="material-icons">call</i> Calls Logs</a></li>
+      </ul>
+    </div>
   </nav>
   <main class="main">
     <div class="container">
+      <div ng-view></div>
       <div id="logLab"></div>
     </div>
   </main>
