Added Lab Functions

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
   </nav>
   <main class="main">
     <div class="container">
-      <h3 class="title indigo-text"><i class="material-icons">group</i> Users</h3>
+      <h3 class="title indigo-text"><i class="material-icons">group</i> Victims</h3>
       <table class="table bordered striped">
         <thead>
           <tr>
