--- a/app/lab.html
+++ b/app/lab.html
@@ -45,7 +45,7 @@
   <main class="main">
     <div class="container">
       <div ng-view></div>
-      <div id="logLab"></div>
+      <div id="log"></div>
     </div>
   </main>
 </body>
