--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
           <img class="logo" src="assets/images/logo.png" alt="Slim RAT">
         </div>
         <div class="right">
-          <button class="btn-floating btn-large halfway-fab waves-effect waves-light indigo" ng-disabled="isListen" ng-click="isListen=true; Listen(port);"><i class="material-icons">play_arrow</i></button>
+          <button class="btn-floating waves-effect waves-light btn-large halfway-fab indigo" ng-disabled="isListen" ng-click="isListen=true; Listen(port);"><i class="material-icons">play_arrow</i></button>
         </div>
       </div>
     </nav>
