--- a/app/lab.html
+++ b/app/lab.html
@@ -27,7 +27,7 @@
           <img class="logo" src="assets/images/logo.png" alt="Slim RAT">
         </div>
         <ul class="right right-15">
-          <li><span class="device" ng-bind="victim.model"></span></li>
+          <li><span class="device">{{victim.model}}</span></li>
           <li><a ng-click="close();"><i class="material-icons">arrow_forward</i></a></li>
         </ul>
       </div>
